fix last line not being readable, style scrollbars and cleanup some code

--- a/client/src/Editor/overrides.css
+++ b/client/src/Editor/overrides.css
@@ -5,4 +5,9 @@
 .CodeMirror-scroll {
   max-width: 100%;
   overflow-x: hidden !important;
+  scrollbar-width: thin;
+}
+
+.CodeMirror-code {
+  margin-bottom: 1em;
 }
