--- a/client/src/reset.css
+++ b/client/src/reset.css
@@ -177,3 +177,20 @@ body {
     transform: translate3d(3px, 0, 0);
   }
 }
+
+::-webkit-scrollbar {
+  width: 9px;
+  height: 9px;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background-color: hsla(0, 0%, 81%, 0.5);
+  border-radius: 20px;
+  border: transparent;
+}
+
+* {
+  scrollbar-width: thin;
+}
